fluentd.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: kube-system
  labels:
    k8s-app: fluentd-logging
    version: v1
    kubernetes.io/cluster-service: "true"
spec:
  selector:
    matchLabels:
    k8s-app: fluentd-logging
  template:
    metadata:
    labels:
        k8s-app: fluentd-logging
        version: v1
        kubernetes.io/cluster-service: "true"
    spec:
    serviceAccount: fluentd
    serviceAccountName: fluentd
    tolerations:
    - key: node-role.kubernetes.io/master
        effect: NoSchedule
    containers:
    - name: fluentd
        image: fluent/fluentd-kubernetes-daemonset:v1.3-debian-elasticsearch
        resources:
        limits:
            memory: 200Mi
        requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: varlog
        mountPath: /var/log
        - name: varlibdockercontainers
        mountPath: /var/lib/docker/containers
        readOnly: true
    terminationGracePeriodSeconds: 30
    volumes:
    - name: varlog
        hostPath:
        path: /var/log
    - name: varlibdockercontainers
        hostPath:
        path: /var/lib/docker/containers
