runner.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: runner
  labels:
    app: runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: runner
  template:
    metadata:
      labels:
        app: runner
    spec:
      containers:
      - name: runner
        image: gitlab/gitlab-runner:latest
      serviceAccountName: runner
