elastic_search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  selector:
    matchLabels:
    component: elasticsearch
  template:
    metadata:
    labels:
        component: elasticsearch
    spec:
    containers:
    - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.4.1
        value: single-node
        ports:
        - containerPort: 9200
        name: http
        protocol: TCP
        resources:
        limits:
            cpu: 500m
            memory: 4Gi
        requests:
            cpu: 500m
            memory: 4Gi

---

apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    service: elasticsearch
spec:
  type: NodePort
  selector:
    component: elasticsearch
  ports:
  - port: 9200
    targetPort: 9200
